--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Image Search App</h1>
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="Search Image" name="" id="search">
+                <input type="text" placeholder="Search Image ! By Dinesh" name="" id="search">
                 <button id="btn" >Search</button>
             </div>
         </nav>
